--- a/Will/reserve.html
+++ b/Will/reserve.html
@@ -10,5 +10,44 @@
 </head>
 <body>
     
+
+
+    <script>
+        const submitBtn = document.getElementbyId('submit-btn');
+
+        submitBtn.addEventListener('click', (e) => {
+            e.preventDefault();
+
+            let customerName = document.getElementbyId('reserve-name').value.trim();
+            let phoneNumber = document.getElementbyId('reserve-phone').value.trim();
+            let email = document.getElementbyId('reserve-email').value.trim();
+            let id = document.getElementbyId('reserve-unique-id').value.trim();
+
+            let newTable = {
+                customerName: customerName,
+                phoneNumber: phoneNumber,
+                email: email,
+                id: id,
+            }
+
+        fetch('/api/table', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(newTable),
+        })
+        .then((response) => response.json())
+        .then((data) => {
+            console.log('reserve.html', data)
+            alert(`Reserving Your Table, ${data.customerName}`)
+        })
+        .catch((error) => 'Error:', error);
+
+        })
+
+
+
+    </script> 
 </body>
 </html>
